# flux

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml
docs/: index.md
examples/plugin/: Cargo.toml
examples/plugin/src/: lib.rs
resources/: flux.1
scripts/: docs.js
scripts/utils/: walk.js
src/: lib.rs  main.rs
src/config/: flux_config.rs  mod.rs  theme.rs
src/plugin/: manager.rs  mod.rs
src/shell/: commands.rs  completion.rs  mod.rs  prompt.rs
src/utils/: env.rs  mod.rs
www/: _config.yml  index.html
www/_docs/: configuration.md  getting-started.md  index.md  plugins.md  quickstart.md
www/_includes/: docs-navigation.html  search-modal.html  theme-switcher.html
www/_layouts/: default.html  docs.html  post.html
www/_layouts/_includes/components/: code-preview.html  contributors.html
www/_posts/: 2025-01-04-release-notes.md
www/assets/css/: docs.css  style.css
www/assets/js/: demo.js  hero-background.js  main.js  search.js  theme.js
www/blog/: index.html
www/docs/: index.html
www/pages/: community.html
