[package]
name = "flux"
version = "0.7.0"
edition = "2021"

[dependencies]
rustyline = "12.0"     # For input handling and history
dirs = "5.0"           # For cross-platform directory handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"     # For config file handling
colored = "2.0"        # For colorful output
chrono = "0.4"
hostname = "0.3"
regex = "1.5"
dialoguer = "0.10"