[package]
name = "flux"
version = "0.1.2"
edition = "2021"

[dependencies]
rustyline = "12.0"     # For input handling and history
dirs = "5.0"           # For cross-platform directory handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"     # For config file handling
colored = "2.0"        # For colorful output
chrono = "0.4"
hostname = "0.3"
regex = "1.5"
dialoguer = "0.10"
base64 = "0.21"
which = "4.4"
libloading = "0.8"
uuid = { version = "1.0", features = ["v4"] }